# lumen

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/campaign/test_snapshots/: amount_over_cap_fails.1.json  claim_after_close_fails.1.json  non_operator_auth_cannot_update_roots.1.json  operator_can_initialize_campaign.1.json  same_nullifier_claim_fails.1.json  tampered_payout_hash_fails_without_transfer.1.json  valid_claim_succeeds.1.json  wrong_compliance_root_fails.1.json  wrong_payout_recipient_fails_without_transfer.1.json
contracts/campaign/tests/: campaign.rs
contracts/mock_token/: Cargo.toml
contracts/mock_token/src/: lib.rs
contracts/mock_token/test_snapshots/test/: mints_demo_balances.1.json
contracts/verifier/: Cargo.toml
contracts/verifier/src/: groth16_claim_v0.rs  lib.rs
deployments/: active-testnet-campaign-config.arg.json  active-testnet.json  aidusd-testnet.json  demo-testnet.json  testnet-alice-claim.json  testnet-alice-duplicate-claim.json  testnet-alice-public-inputs.arg.json  testnet-bob-claim.json  testnet-bob-public-inputs.arg.json  testnet-campaign-config.arg.json  testnet-campaign.json  testnet.json
docs/: ARCHITECTURE.md  AUDITOR_DISCLOSURE.md  COMPLIANCE_FLOW.md  DEMO_SCRIPT.md  DEPLOYMENT.md  FINAL_RELEASE_CHECKLIST.md  FUTURE_WORK.md  JUDGE_WALKTHROUGH.md  LIMITATIONS.md  PAYOUT_FLOW.md  PUBLIC_PRIVATE_INPUTS.md  ROADMAP.md  SOROBAN_CONTRACTS.md  SUBMISSION.md  TESTNET_DEPLOYMENT.md  TESTNET_FLOW.md  THREAT_MODEL.md  (+1 more)
(+96 files in other folders)
